Added block page

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -75,7 +75,8 @@ a:hover, a:active, a:focus
 .summary,
 .transactions,
 .transaction,
-.address
+.address,
+.block
 {
   display: table;
   height: 567px;
@@ -86,7 +87,8 @@ a:hover, a:active, a:focus
 .summary .coin-info,
 .transactions .coin-info,
 .transaction .coin-info,
-.address .coin-info
+.address .coin-info,
+.block .coin-info
 {
   background-color: #ffffff;
   border-radius: 20px;
@@ -101,7 +103,8 @@ a:hover, a:active, a:focus
 .summary .coin-info .preview,
 .transactions .coin-info .preview,
 .transaction .coin-info .preview,
-.address .coin-info .preview
+.address .coin-info .preview,
+.block .coin-info .preview
 {
   background-image: url("/images/preview.png");
   border-top-left-radius: 20px;
@@ -112,7 +115,8 @@ a:hover, a:active, a:focus
 .summary .coin-info .preview img,
 .transactions .coin-info .preview img,
 .transaction .coin-info .preview img,
-.address .coin-info .preview img
+.address .coin-info .preview img,
+.block .coin-info .preview img
 {
   border-radius: 64px;
   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.6);
@@ -124,7 +128,8 @@ a:hover, a:active, a:focus
 .summary .coin-info .info-tr,
 .transactions .coin-info .info-tr,
 .transaction .coin-info .info-tr,
-.address .coin-info .info-tr
+.address .coin-info .info-tr,
+.block .coin-info .info-tr
 {
   border-radius: 20px;
   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
@@ -136,7 +141,8 @@ a:hover, a:active, a:focus
 .summary .coin-info .name,
 .transactions .coin-info .name,
 .transaction .coin-info .name,
-.address .coin-info .name
+.address .coin-info .name,
+.block .coin-info .name
 {
   font-size: 18px;
   font-weight: bold;
@@ -147,7 +153,8 @@ a:hover, a:active, a:focus
 .summary .coin-info .value,
 .transactions .coin-info .value,
 .transaction .coin-info .value,
-.address .coin-info .value
+.address .coin-info .value,
+.block .coin-info .value
 {
   font-size: 16px;
   line-height: 18px;
@@ -156,7 +163,8 @@ a:hover, a:active, a:focus
 .summary .coin-info a,
 .transactions .coin-info a,
 .transaction .coin-info a,
-.address .coin-info a
+.address .coin-info a,
+.block .coin-info a
 {
   text-decoration: none;
 }
@@ -164,7 +172,8 @@ a:hover, a:active, a:focus
 .summary .coin-info .website,
 .transactions .coin-info .website,
 .transaction .coin-info .website,
-.address .coin-info .website
+.address .coin-info .website,
+.block .coin-info .website
 {
   border-radius: 20px;
   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
@@ -176,7 +185,8 @@ a:hover, a:active, a:focus
 .summary .coin-info .website .title,
 .transactions .coin-info .website .title,
 .transaction .coin-info .website .title,
-.address .coin-info .website .title
+.address .coin-info .website .title,
+.block .coin-info .website .title
 {
   color: #4444cc;
   font-size: 18px;
@@ -188,7 +198,8 @@ a:hover, a:active, a:focus
 .summary .coin-info .website .url,
 .transactions .coin-info .website .url,
 .transaction .coin-info .website .url,
-.address .coin-info .website .url
+.address .coin-info .website .url,
+.block .coin-info .website .url
 {
   color: #6666cc;
   font-size: 16px;
@@ -198,7 +209,8 @@ a:hover, a:active, a:focus
 .summary .last-blocks,
 .transactions .last-transactions,
 .transaction .transaction-info,
-.address .address-info
+.address .address-info,
+.block .block-info
 {
   display: table-cell;
   padding: 0px 0px 0px 20px;
@@ -208,7 +220,8 @@ a:hover, a:active, a:focus
 .summary .last-blocks .container,
 .transactions .last-transactions .container,
 .transaction .transaction-info .container,
-.address .address-info .container
+.address .address-info .container,
+.block .block-info .container
 {
   background-color: #ffffff;
   border-radius: 20px;
@@ -218,7 +231,9 @@ a:hover, a:active, a:focus
   width: 100%;
 }
 
-.address .address-info .container
+.transaction .transaction-info .container,
+.address .address-info .container,
+.block .block-info .container
 {
   height: auto;
   min-height: 567px;
@@ -227,7 +242,8 @@ a:hover, a:active, a:focus
 .summary .last-blocks .content,
 .transactions .last-transactions .content,
 .transaction .transaction-info .content,
-.address .address-info .content
+.address .address-info .content,
+.block .block-info .content
 {
   margin: 20px 20px 20px 20px;
   width: calc(100% - 40px);
@@ -285,7 +301,10 @@ a:hover, a:active, a:focus
 .transaction .transaction-info .transaction-summary,
 .address .address-info .address-main,
 .address .address-info .address-summary,
-.address .address-info .address-transactions
+.address .address-info .address-transactions,
+.block .block-info .block-main,
+.block .block-info .block-summary,
+.block .block-info .block-transactions
 {
   border-collapse: collapse;
   display: table;
@@ -309,7 +328,8 @@ a:hover, a:active, a:focus
 .summary .last-blocks .blocks-tr,
 .transactions .last-transactions .transactions-tr,
 .transaction .transaction-info .transaction-tr,
-.address .address-info .address-tr
+.address .address-info .address-tr,
+.block .block-info .block-tr
 {
   display: table-row;
 }
@@ -317,7 +337,8 @@ a:hover, a:active, a:focus
 .summary .last-blocks .blocks-tr--main,
 .transactions .last-transactions .transactions-tr--main,
 .transaction .transaction-info .transaction-tr--main,
-.address .address-info .address-tr--main
+.address .address-info .address-tr--main,
+.block .block-info .block-tr--main
 {
   color: #ffffff;
   font-size: 20px;
@@ -328,7 +349,8 @@ a:hover, a:active, a:focus
 .summary .last-blocks .blocks-tr--values,
 .transactions .last-transactions .transactions-tr--values,
 .transaction .transaction-info .transaction-tr--values,
-.address .address-info .address-tr--values
+.address .address-info .address-tr--values,
+.block .block-info .block-tr--values
 {
   font-size: 20px;
   line-height: 22px;
@@ -337,7 +359,8 @@ a:hover, a:active, a:focus
 .summary .last-blocks .blocks-td,
 .transactions .last-transactions .transactions-td,
 .transaction .transaction-info .transaction-td,
-.address .address-info .address-td
+.address .address-info .address-td,
+.block .block-info .block-td
 {
   display: table-cell;
   padding: 10px 10px 10px 10px;
@@ -346,7 +369,8 @@ a:hover, a:active, a:focus
 .summary .last-blocks .blocks-tr--main .blocks-td,
 .transactions .last-transactions .transactions-tr--main .transactions-td,
 .transaction .transaction-info .transaction-tr--main .transaction-td,
-.address .address-info .address-tr--main .address-td
+.address .address-info .address-tr--main .address-td,
+.block .block-info .block-tr--main .block-td
 {
   background-color: #6666cc;
   display: table-cell;
@@ -355,7 +379,8 @@ a:hover, a:active, a:focus
 .summary .last-blocks .blocks-tr--main .blocks-td:first-child,
 .transactions .last-transactions .transactions-tr--main .transactions-td:first-child,
 .transaction .transaction-info .transaction-tr--main .transaction-td:first-child,
-.address .address-info .address-tr--main .address-td:first-child
+.address .address-info .address-tr--main .address-td:first-child,
+.block .block-info .block-tr--main .block-td:first-child
 {
   border-top-left-radius: 10px;
 }
@@ -363,7 +388,8 @@ a:hover, a:active, a:focus
 .summary .last-blocks .blocks-tr--main .blocks-td:last-child,
 .transactions .last-transactions .transactions-tr--main .transactions-td:last-child,
 .transaction .transaction-info .transaction-tr--main .transaction-td:last-child,
-.address .address-info .address-tr--main .address-td:last-child
+.address .address-info .address-tr--main .address-td:last-child,
+.block .block-info .block-tr--main .block-td:last-child
 {
   border-top-right-radius: 10px;
 }
@@ -371,7 +397,8 @@ a:hover, a:active, a:focus
 .summary .last-blocks .blocks-tr--values .blocks-td,
 .transactions .last-transactions .transactions-tr--values .transactions-td,
 .transaction .transaction-info .transaction-tr--values .transaction-td,
-.address .address-info .address-tr--values .address-td
+.address .address-info .address-tr--values .address-td,
+.block .block-info .block-tr--values .block-td
 {
   border: 1px solid #eeeeee;
   display: table-cell;
@@ -385,7 +412,9 @@ a:hover, a:active, a:focus
   border: none;
 }
 
-.address .address-info .address-main .credit
+.address .address-info .address-main .credit,
+.address .address-info .address-summary .received,
+.address .address-info .address-transactions .received
 {
   background-color: #44cc44;
   color: #ffffff;
@@ -398,28 +427,22 @@ a:hover, a:active, a:focus
   width: 50%;
 }
 
-.address .address-info .address-summary .received
-{
-  background-color: #44cc44;
-  color: #ffffff;
-  font-weight: bold;
-}
-
-.address .address-info .address-summary .spent
+.address .address-info .address-summary .spent,
+.address .address-info .address-transactions .spent
 {
   background-color: #ff4444;
   color: #ffffff;
   font-weight: bold;
 }
 
-.address .address-info .address-transactions .received
+.block .block-info .block-transactions .affirmative
 {
   background-color: #44cc44;
   color: #ffffff;
   font-weight: bold;
 }
 
-.address .address-info .address-transactions .spent
+.block .block-info .block-transactions .negative
 {
   background-color: #ff4444;
   color: #ffffff;
