--- a/views/address.pug
+++ b/views/address.pug
@@ -4,6 +4,7 @@ html
     include includes/head.pug
     |
     script(src='/scripts/address.js')
+    script(src='/scripts/search.js')
   body
     include includes/header.pug
     |
@@ -29,6 +30,10 @@ html
         div(class='address-info')
           div(class='container')
             div(class='content')
+              div(class='search-bar')
+                form(onsubmit='search(); return false;')
+                  input(id='searchText', placeholder='Search for block indexes, block hashes, transactions or addresses...', type='text')
+                  input(type='submit', value='Search')
               div(class='address-main')
                 div(class='address-tr address-tr--main')
                   div(class='address-td')= 'Address'
