Separated coin info script

--- a/views/address.pug
+++ b/views/address.pug
@@ -4,6 +4,7 @@ html
     include includes/head.pug
     |
     script(src='/scripts/address.js')
+    script(src='/scripts/info.js')
     script(src='/scripts/search.js')
   body
     include includes/header.pug
