--- a/views/block.pug
+++ b/views/block.pug
@@ -4,6 +4,7 @@ html
     include includes/head.pug
     |
     script(src='/scripts/block.js')
+    script(src='/scripts/info.js')
     script(src='/scripts/search.js')
   body
     include includes/header.pug
