--- a/views/transactions.pug
+++ b/views/transactions.pug
@@ -3,6 +3,7 @@ html
   head
     include includes/head.pug
     |
+    script(src='/scripts/info.js')
     script(src='/scripts/search.js')
     script(src='/scripts/transactions.js')
   body
