Fixed API page function description

--- a/views/api.pug
+++ b/views/api.pug
@@ -117,7 +117,7 @@ html
               span(class='parameters')
                 | No parameters.
               span(class='description')
-                | Directly returns the client's answer by calling the "getblockchaininfo" function.
+                | Directly returns the client's answer by calling the "getmininginfo" function.
           div(class='function' id='getRawTransaction')
             h3 getRawTransaction
             p
