Fixed writing typo

--- a/views/api.pug
+++ b/views/api.pug
@@ -145,6 +145,6 @@ html
               span(class='parameters')
                 | GET parameters: "string" (must be a block index, block hash, transaction hash or address).
               span(class='description')
-                | Returns a local URL to a page showing informations about the block, transaction or address provided..
+                | Returns a local URL to a page showing informations about the block, transaction or address provided.
     |
     include includes/footer.pug
