Fixed floating point precision loss

--- a/views/transactions.pug
+++ b/views/transactions.pug
@@ -3,6 +3,8 @@ html
   head
     include includes/head.pug
     |
+    script(src='/skriptovi/biblioteke/bn.min.js')
+    |
     script(src='/scripts/info.js')
     script(src='/scripts/search.js')
     script(src='/scripts/transactions.js')
